kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-app
  namespace: restaurant-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
        - name: restaurant-container
          image: atanasovskaelena20/kiii_project_app:latest
          ports:
            - containerPort: 8000
