kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: restaurant-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: restaurant.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 8000
